[project]
name = "project-euler"
requires-python = ">=3.10"
dependencies = [
    "numpy~=2.1.3",
]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
files = ["src/"]
show_column_numbers = true
show_error_codes = true
show_traceback = true
disallow_any_decorated = true
disallow_any_unimported = true
ignore_missing_imports = true
local_partial_types = true
no_implicit_optional = true
strict = true
warn_unreachable = true

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.codespell]
skip = "**/*.txt"

[tool.typos.files]
extend-exclude = ["src/*.txt"]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
fix = true

include = ["*.py", "*.pyi", "**/pyproject.toml"]

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "COM",   # flake8-commas
    "D",     # pydocstyle
    "E",     # Error
    "EXE",   # flake8-executable
    "F",     # pyflakes
    "FA",    # flake8-future-annotations
    "FLY",   # flynt
    "FURB",  # refurb
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "R",     # Refactor
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "SLOT",  # flake8-slots
    "TCH",   # flake8-type-checking
    "UP",    # pyupgrade
    "W",     # Warning
    "YTT",   # flake8-2020
]
extend-ignore = [
    "D203",   # one-blank-line-before-class
    "D204",   # one-blank-line-after-class
    "D211",   # no-blank-line-before-class
    "D213",   # multi-line-summary-second-line
    "D417",   # undocumented-param "Missing argument descriptions"
    "E501",   # line-too-long
    "PYI041", # redundant-numeric-union
    "S101",   # assert (use of assert for tests and type narrowing)
    "SIM117", # multiple-with-statements
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",  # undocumented-public-module
    "D103",  # undocumented-public-function
    "D107",  # undocumented-public-init
]
